framec/tests/snapshots/kotlin_snapshots__lifecycle.snap
---
source: framec/tests/kotlin_snapshots.rs
expression: "compile_fixture(\"08_lifecycle\", \"kotlin\")"
---
class LifecycleFrameEvent(val _message: String, val _parameters: MutableList<Any?> = mutableListOf())

class LifecycleFrameContext(val _event: LifecycleFrameEvent, var _return: Any? = null) {
    val _data: MutableMap<String, Any?> = mutableMapOf()
    var _transitioned: Boolean = false
}

class LifecycleCompartment(val state: String) {
    val state_args: MutableList<Any?> = mutableListOf()
    val state_vars: MutableMap<String, Any?> = mutableMapOf()
    val enter_args: MutableList<Any?> = mutableListOf()
    val exit_args: MutableList<Any?> = mutableListOf()
    var forward_event: LifecycleFrameEvent? = null
    var parent_compartment: LifecycleCompartment? = null

    fun copy(): LifecycleCompartment {
        val c = LifecycleCompartment(this.state)
        c.state_args.addAll(this.state_args)
        c.state_vars.putAll(this.state_vars)
        c.enter_args.addAll(this.enter_args)
        c.exit_args.addAll(this.exit_args)
        c.forward_event = this.forward_event
        c.parent_compartment = this.parent_compartment
        return c
    }
}

class Lifecycle {
    private var _state_stack: MutableList<LifecycleCompartment>
    private var __compartment: LifecycleCompartment
    private var __next_compartment: LifecycleCompartment?
    private var _context_stack: MutableList<LifecycleFrameContext>
    var entered: Int = 0
    var exited: Int = 0
    var tag: String = ""

    init {
        _state_stack = mutableListOf()
        _context_stack = mutableListOf()
        this.__compartment = __prepareEnter("Idle", mutableListOf<Any?>(), mutableListOf<Any?>())
        this.__next_compartment = null
    }

    fun __frame_init() {
        val __e = LifecycleFrameEvent("$>", __compartment.enter_args)
        val __ctx = LifecycleFrameContext(__e, null)
        _context_stack.add(__ctx)
        __kernel(__e)
        _context_stack.removeAt(_context_stack.size - 1)
    }

    private fun hsm_chain(): Map<String, List<String>> {
        return mapOf(
            "Idle" to listOf("Idle"),
            "Running" to listOf("Running"),
        )
    }
    private fun __prepareEnter(leaf: String, state_args: MutableList<Any?>, enter_args: MutableList<Any?>): LifecycleCompartment {
        var comp: LifecycleCompartment? = null
        for (name in hsm_chain()[leaf]!!) {
            val new_comp = LifecycleCompartment(name)
            new_comp.state_args.addAll(state_args)
            new_comp.enter_args.addAll(enter_args)
            new_comp.parent_compartment = comp
            comp = new_comp
        }
        return comp!!
    }

    private fun __prepareExit(exit_args: MutableList<Any?>) {
        var comp: LifecycleCompartment? = __compartment
        while (comp != null) {
            comp.exit_args.clear()
            comp.exit_args.addAll(exit_args)
            comp = comp.parent_compartment
        }
    }

    private fun __kernel(__e: LifecycleFrameEvent) {
        // Route event to current state.
        __router(__e)
        // Drain any transitions queued by the handler.
        while (__next_compartment != null) {
            val next_compartment: LifecycleCompartment = __next_compartment!!
            __next_compartment = null
            // Exit the current (leaf) state.
            val exit_event = LifecycleFrameEvent("<$", __compartment.exit_args)
            __router(exit_event)
            // Switch to the new compartment.
            __compartment = next_compartment
            // Three-branch forward-event handling.
            val forward_event: LifecycleFrameEvent? = next_compartment.forward_event
            next_compartment.forward_event = null
            if (forward_event == null) {
                // No forwarded event — synthesize a fresh $>.
                val enter_event = LifecycleFrameEvent("$>", __compartment.enter_args)
                __router(enter_event)
            } else if (forward_event._message == "$>") {
                // Forwarded event IS $> — dispatch directly so the
                // destination's $> handler receives the caller's payload.
                __router(forward_event)
            } else {
                // Forwarded event is not $> — initialize the destination
                // with a fresh $>, then dispatch the forward.
                val enter_event = LifecycleFrameEvent("$>", __compartment.enter_args)
                __router(enter_event)
                __router(forward_event)
            }
            for (ctx in _context_stack) {
                ctx._transitioned = true
            }
        }
    }

    private fun __router(__e: LifecycleFrameEvent) {
        if (__compartment.state == "Idle") {
            _state_Idle(__e, __compartment)
        } else if (__compartment.state == "Running") {
            _state_Running(__e, __compartment)
        }
    }

    private fun __transition(next: LifecycleCompartment) {
        __next_compartment = next
    }

    fun start(label: String) {
        val __e = LifecycleFrameEvent("start", mutableListOf(label))
        val __ctx = LifecycleFrameContext(__e, null)
        _context_stack.add(__ctx)
        __kernel(_context_stack[_context_stack.size - 1]._event)
        _context_stack.removeAt(_context_stack.size - 1)
    }

    fun stop() {
        val __e = LifecycleFrameEvent("stop", mutableListOf())
        val __ctx = LifecycleFrameContext(__e, null)
        _context_stack.add(__ctx)
        __kernel(_context_stack[_context_stack.size - 1]._event)
        _context_stack.removeAt(_context_stack.size - 1)
    }

    private fun _state_Idle(__e: LifecycleFrameEvent, compartment: LifecycleCompartment) {
        if (__e._message == "start") {
            this._s_Idle_hdl_user_start(__e, compartment)
            return
        }
    }

    private fun _state_Running(__e: LifecycleFrameEvent, compartment: LifecycleCompartment) {
        if (__e._message == "<$") {
            this._s_Running_hdl_frame_exit(__e, compartment)
            return
        }
        if (__e._message == "$>") {
            this._s_Running_hdl_frame_enter(__e, compartment)
            return
        }
        if (__e._message == "stop") {
            this._s_Running_hdl_user_stop(__e, compartment)
            return
        }
    }

    private fun _s_Idle_hdl_user_start(__e: LifecycleFrameEvent, compartment: LifecycleCompartment) {
        val label = __e._parameters[0] as String
        (label)
        val __compartment = __prepareEnter("Running", mutableListOf<Any?>(), mutableListOf<Any?>())
        __transition(__compartment)
        return
    }

    private fun _s_Running_hdl_frame_exit(__e: LifecycleFrameEvent, compartment: LifecycleCompartment) {
        self.exited = self.exited + 1
    }

    private fun _s_Running_hdl_frame_enter(__e: LifecycleFrameEvent, compartment: LifecycleCompartment) {
        val label = compartment.enter_args[0] as String
        self.entered = self.entered + 1
        self.tag = label
    }

    private fun _s_Running_hdl_user_stop(__e: LifecycleFrameEvent, compartment: LifecycleCompartment) {
        val __compartment = __prepareEnter("Idle", mutableListOf<Any?>(), mutableListOf<Any?>())
        __transition(__compartment)
        return
    }

    companion object {
        @JvmStatic fun __create(): Lifecycle {
            val c = Lifecycle()
            c.__frame_init()
            return c
        }    }
}
